--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing news</h1>
+<h1>Edit news</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @news %> |
 <%= link_to 'Back', news_index_path %>
