--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,25 +1,26 @@
-<h1>Listing news</h1>
+<h1>News</h1>
 
-<table>
+<table class="table table-hover table-bordered">
   <tr>
     <th>Title</th>
     <th>Author</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Actions</th>
   </tr>
 
 <% @news.each do |news| %>
   <tr>
-    <td><%= news.title %></td>
+    <td><%= link_to news.title, news %></td>
     <td><%= news.author %></td>
-    <td><%= link_to 'Show', news %></td>
-    <td><%= link_to 'Edit', edit_news_path(news) %></td>
-    <td><%= link_to 'Destroy', news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td>
+      <%= link_to edit_news_path(news), class: 'btn btn-mini' do %>
+        <span><%= 'Edit' %></span>
+        <i class="icon-pencil"></i>
+      <% end %>
+      <%= link_to news, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-mini' do %>
+        <span><%= 'Delete' %></span>
+        <i class="icon-trash"></i>
+      <% end %>
+    </td>
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New News', new_news_path %>
