--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,20 +1,10 @@
-<p id="notice"><%= notice %></p>
+<div class="well well-large">
+  <h1><%= @news.title %></h1>
+  <p><%= @news.content %></p>
+  <p>
+    <b>Author:</b>
+    <%= @news.author %>
+  </p>
+</div>
 
-<p>
-  <b>Title:</b>
-  <%= @news.title %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%= @news.content %>
-</p>
-
-<p>
-  <b>Author:</b>
-  <%= @news.author %>
-</p>
-
-
-<%= link_to 'Edit', edit_news_path(@news) %> |
 <%= link_to 'Back', news_index_path %>
