--- a/app/views/application/_main_panel.html.erb
+++ b/app/views/application/_main_panel.html.erb
@@ -1,24 +1,37 @@
 <div class="well well-small">
-  <span class="wrench-icon-wrapper">
-    <i class="icon-wrench"></i>
-    <span>Administrator</span>
-  </span>
+  <% if current_user && current_user.is_admin? then %>
+    <span class="wrench-icon-wrapper">
+      <i class="icon-wrench"></i>
+      <span>Administrator</span>
+    </span>
 
-  <% if request.path =~ /^\/news\/\d+$/ %>
-    <%= link_to edit_news_path(@news), class: 'btn btn-mini' do %>
-      <span>Edit</span>
-      <i class="icon-pencil"></i>
+    <% if request.path =~ /^\/news\/\d+$/ then %>
+      <%= link_to edit_news_path(@news), class: 'btn btn-mini' do %>
+        <span>Edit</span>
+        <i class="icon-pencil"></i>
+      <% end %>
+      <%= link_to @news, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-mini' do %>
+            <span><%= 'Delete' %></span>
+            <i class="icon-trash"></i>
+      <% end %>
     <% end %>
-    <%= link_to @news, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-mini' do %>
-          <span><%= 'Delete' %></span>
-          <i class="icon-trash"></i>
+
+    <% if request.path =~ /^\/news\/?$/ then %>
+      <%= link_to new_news_path, class: 'btn btn-mini' do %>
+        <span><%= 'Add News' %></span>
+        <i class="icon-plus"></i>
+      <% end %>
     <% end %>
   <% end %>
 
-  <% if request.path =~ /^\/news\/?$/ %>
-    <%= link_to new_news_path, class: 'btn btn-mini' do %>
-      <span><%= 'Add News' %></span>
-      <i class="icon-plus"></i>
+  <div class="login-panel">
+    <% if user_signed_in? then %>
+      <span>You are logged in as:</span>
+      <span style="font-weight: bold;"><%= current_user.email %></span> |
+      <span><%= link_to "Logout", destroy_user_session_path, :method => :delete %></span>
+    <% else %>
+      <span><%= link_to "Login", new_user_session_path %></span> |
+      <span><%= link_to "Register", new_user_registration_path %></span>
     <% end %>
-  <% end %>
+  </div>
 </div>
